# sifi

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
db/src/: ideal_syntax.rs  main.rs
html-components/: Cargo.toml
html-components/src/: lib.rs  main.rs  utils.rs
json_formatter/: .gitignore  Cargo.toml
json_formatter/src/: main.rs
json_viewer/: .gitignore  Cargo.toml
json_viewer-zig/: build.zig.zon
json_viewer-zig/src/: main.zig
json_viewer/src/: lib.rs  main.rs
lib_cli/: Cargo.toml  README.md
lib_cli/src/: documentation.rs  documentation_impl.rs  lib.rs  main.rs  router.rs  sequence.rs  utils.rs
lib_html/: Cargo.toml  normal_html_spec.md
lib_html/src/: elements.rs  lib.rs  main.rs  style.css  tailwind.rs  utils.rs
lib_html/src/elements/: address.rs  article.rs  aside.rs  attributes.rs  block_quote.rs  body.rs  caption.rs  code.rs  column_metadata.rs  div.rs  emphasis.rs  figure.rs  footer.rs  generic_html_element.rs  head.rs  header.rs  heading.rs  heading_group.rs  html.rs  keyboard_input.rs  line_break.rs  link.rs  list_item.rs  main.rs  mark.rs  menu.rs  mod.rs  navigation.rs  ordered_list.rs  paragraph.rs  preformatted_text.rs  program_sample.rs  quote.rs  search.rs  section.rs  stale.rs  string.rs  strong_importance.rs  table.rs  table_body.rs  (+5 more)
lib_markdown/src/: main.rs
personal_website/: Cargo.toml
personal_website/src/: main.rs  style.css
src/0installer/: Cargo.toml
src/0installer/src/: cli.rs  main.rs
src/db/: Cargo.toml
src/executables_installer/: Cargo.toml
src/json_formatter/: .gitignore
src/json_viewer/: Cargo.toml
src/json_viewer-zig/: build.zig
src/lib_cli/: Cargo.toml
src/lib_cli-zig/: build.zig  build.zig.zon
src/lib_html/: Cargo.toml
src/lib_markdown/: Cargo.toml
src/personal_website/: Cargo.toml
toolbox/: Cargo.toml
toolbox/src/: documentation.rs  flag.rs  flags.rs  lib.rs  main.rs  parsing.rs  router.rs  utils.rs
(+46 files in other folders)
