[workspace]
resolver = "3"
members = ["lib_html", "lib_cli", "lib_markdown", "personal_website"]

[workspace.dependencies]
lib_html = { path = "lib_html" }

# For minimum size:
# RUSTFLAGS="-Zlocation-detail=none"
# ( RUSTFLAGS="-Zlocation-detail=none -Zfmt-debug=none" )
# -Z build-std=std,panic_abort -Z build-std-features="optimize_for_size"
#
# [profile.release]
# strip = true
# opt-level = "z"
# lto = true
# codegen-units = 1
# panic = "abort"
