[workspace]
resolver = "3"
members = ["lib_html", "lib_cli", "lib_markdown", "json_viewer"]

[workspace.dependencies]
lib_html = { path = "lib_html" }
anyhow = "1.0.98"

# For minimum size:
# RUSTFLAGS="-Zlocation-detail=none"
# ( RUSTFLAGS="-Zlocation-detail=none -Zfmt-debug=none" )
# -Z build-std=std,panic_abort -Z build-std-features="optimize_for_size"
#
# [profile.release]
# strip = true
# opt-level = "z"
# lto = true
# codegen-units = 1
# panic = "abort"
