[workspace]
resolver = "3"
members = ["src/lib_html", "src/lib_cli", "src/lib_markdown", "src/json_viewer", "src/json_formatter"]
exclude = ["personal_website"]

[workspace.dependencies]
anyhow = "1.0.98"

# [profile.release]
# debug = true

# For minimum size:
# RUSTFLAGS="-Zlocation-detail=none"
# ( RUSTFLAGS="-Zlocation-detail=none -Zfmt-debug=none" )
# -Z build-std=std,panic_abort -Z build-std-features="optimize_for_size"
#
# [profile.release]
# strip = true
# opt-level = "z"
# lto = true
# codegen-units = 1
# panic = "abort"
